--- a/config/pi-hole.conf
+++ b/config/pi-hole.conf
@@ -12,7 +12,7 @@ server:
     prefer-ip6: no
 
     root-hints: "/etc/unbound/root.hints"
-    auto-trust-anchor-file: "/var/lib/unbound/root.key"
+    # auto-trust-anchor-file: "/usr/share/dnssec-root/trusted-key.key"
 
     harden-glue: yes
     # Require DNSSEC data for trust-anchored zones, if such data is absent, the zone becomes BOGUS
@@ -30,7 +30,7 @@ server:
     num-threads: 1
     # Ensure kernel buffer is large enough to not lose messages in traffic spikes
     #so-rcvbuf: 1m
-    tls-cert-bundle: /etc/ssl/ca-certificates.crt
+    tls-cert-bundle: /etc/ssl/certs/ca-certificates.crt
     # Ensure privacy of local IP ranges
     # private-address: 192.168.0.0/16
     # private-address: 169.254.0.0/16
