added macvlan single unbound service, updated devenv. Makefile

--- a/config/pi-hole.conf
+++ b/config/pi-hole.conf
@@ -3,7 +3,8 @@ server:
     verbosity: 3
 
     interface: 0.0.0.0
-    port: 5335
+    # port: 5335
+    port: 53
     do-ip4: yes
     do-udp: yes
     do-tcp: yes
