--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,6 @@ services:
       interval: 1s
       timeout: 3s
       retries: 30
+    volumes:
+      - ./config:/etc/unbound:ro
+      - ./log/unbound.log:/var/log/unbound/unbound.log:rw
