--- a/config/pi-hole.conf
+++ b/config/pi-hole.conf
@@ -1,9 +1,12 @@
 server:
+    directory: "/etc/unbound"
+    username: root
     logfile: "/var/log/unbound/unbound.log"
-    verbosity: 3
+    verbosity: 2
 
     interface: 0.0.0.0
-    port: 5335
+    # port: 5335
+    port: 53
     do-ip4: yes
     do-udp: yes
     do-tcp: yes
@@ -12,7 +15,7 @@ server:
     prefer-ip6: no
 
     root-hints: "/etc/unbound/root.hints"
-    # auto-trust-anchor-file: "/usr/share/dnssec-root/trusted-key.key"
+    auto-trust-anchor-file: "/usr/share/dnssec-root/trusted-key.key"
 
     harden-glue: yes
     # Require DNSSEC data for trust-anchored zones, if such data is absent, the zone becomes BOGUS
@@ -50,18 +53,18 @@ server:
     access-control: 172.16.0.0/12 allow
     access-control: 10.0.0.0/8 allow
 
-    forward-zone:
-        name: "."
-        forward-tls-upstream: yes
-        forward-addr: 9.9.9.9@853#dns.quad9.net
-        forward-addr: 149.112.112.112@853#dns.quad9.net
-        forward-addr: 2620:fe::fe@853#dns.quad9.net
-        forward-addr: 2620:fe::9@853#dns.quad9.net
-        # forward-addr: 1.0.0.1@853#one.one.one.one
-        # forward-addr: 1.1.1.1@853#one.one.one.one
-        # forward-addr: 1.1.1.1@853#cloudflare-dns.com
-        # forward-addr: 1.0.0.1@853#cloudflare-dns.com
-        # forward-addr: 2606:4700:4700::1111@853#cloudflare-dns.com
-        # forward-addr: 2606:4700:4700::1001@853#cloudflare-dns.com
+    # forward-zone:
+    #     name: "."
+    #     forward-tls-upstream: yes
+    #     forward-addr: 9.9.9.9@853#dns.quad9.net
+    #     forward-addr: 149.112.112.112@853#dns.quad9.net
+    #     forward-addr: 2620:fe::fe@853#dns.quad9.net
+    #     forward-addr: 2620:fe::9@853#dns.quad9.net
+    #     forward-addr: 1.0.0.1@853#one.one.one.one
+    #     forward-addr: 1.1.1.1@853#one.one.one.one
+    #     forward-addr: 1.1.1.1@853#cloudflare-dns.com
+    #     forward-addr: 1.0.0.1@853#cloudflare-dns.com
+    #     forward-addr: 2606:4700:4700::1111@853#cloudflare-dns.com
+    #     forward-addr: 2606:4700:4700::1001@853#cloudflare-dns.com
     remote-control:
         control-enable: no
