--- a/config/unbound.conf
+++ b/config/unbound.conf
@@ -5,7 +5,6 @@ server:
     verbosity: 2
 
     interface: 0.0.0.0
-    # port: 5335
     port: 53
     do-ip4: yes
     do-udp: yes
@@ -34,13 +33,7 @@ server:
     # Ensure kernel buffer is large enough to not lose messages in traffic spikes
     #so-rcvbuf: 1m
     tls-cert-bundle: /etc/ssl/certs/ca-certificates.crt
-    # Ensure privacy of local IP ranges
-    # private-address: 192.168.0.0/16
-    # private-address: 169.254.0.0/16
-    # private-address: 172.16.0.0/12
-    # private-address: 10.0.0.0/8
-    # private-address: fd00::/8
-    # private-address: fe80::/10
+    # RFC 1918
     private-address: 10.0.0.0/8
     private-address: 172.16.0.0/12
     private-address: 192.168.0.0/16
